# ManagementQuizBot

./: .env2  .gitignore  Dockerfile  Dockerfile_fastapi  Makefile  README.md  dashboard.py  dev-docker-compose.yaml  docker-compose.yml  entrypoint.sh  env.example  github.sh  pgbouncer_userlist.txt  postgresql.conf  pyproject.toml  redis.conf  requirements.txt  requirements_windows.txt  test.txt
adservice/: admin.py  apps.py  models.py  signals.py  tasks.py
adservice/migrations/: 0001_initial.py  0002_button.py  0003_media_file_type.py  0004_ad_count.py  0005_ad_language.py
bot/: app.py  webhook.py
bot/filters/: __init__.py  main.py  registered.py
bot/keyboards/: inline_kb.py  reply_kb.py
bot/middlewares/: __init__.py  checking.py  logging.py  registered.py
bot/states/: main.py
bot/utils/: functions.py  methods.py  note.py  orm.py  redis_group.py  test.xlsx  texts.py
common/: admin.py  apps.py  models.py  note.py  resources.py  tasks.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_alter_textcode_code.py  0003_data.py  0004_data_video_urls.py  0005_data_username.py  0006_data_channel_id.py  0007_telegramprofile_phone_number.py  0008_telegramprofile_is_registered.py  0010_alter_data_file_types.py  (+1 more)
docs/: PROJECT.md  redis_python_guide.md
languages/: en.json  ru.json  uz.json
quiz/: admin.py  choices.py  managers.py  models.py  note.py  tasks.py
src/: settings.py  urls.py
static/: staticfiles.json
support/: admin.py  choices.py  models.py
trush/: message_to_dict.json
utils/: bot.py  choices.py  functions.py  models.py
(+61 files in other folders)
