[project]
name = "managementquizbot"
version = "0.1.0"
description = ""
authors = [
    {name = "ChoriyevJamshid",email = "jamshidchoriyev709@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
